# texlive-texmf

./: Makefile  README.md  texlive-2007-nolatex.patch  texlive-texmf-bz#699575.patch  texlive-texmf.spec  texlive.2007.zip.list
src/doc/amstex/base/: amsppt.doc
src/doc/bibtex/germbib/: README.bibgerm  apalike.tex  btxdoc.tex  btxhak.tex  gerbibtx.bib  gerbibtx.tex  gerxampl.bib  schaum.bib  xampl.bib
src/doc/cslatex/base/: mklinks  (+1 more)
src/doc/dvips/: dvips.html
src/doc/eplain/: AUTHORS  ChangeLog  INSTALL  NEWS  PROJECTS  README
src/doc/fontname/: ChangeLog  fontname.html  fontname.texi
src/doc/info/: dir
src/doc/kpathsea/: kpathsea.html
src/doc/latex/chapterfolder/: README  aclocal.m4  configure  configure.in  documentation.tex
src/doc/latex/chapterfolder/intro/: intro.tex
src/doc/latex/chapterfolder/util/: util.tex
src/doc/latex/chapterfolder/util/cha/: cha.tex
src/doc/latex/chapterfolder/util/file/: file.tex
src/doc/latex/chapterfolder/util/part/: part.tex
src/doc/latex/chapterfolder/util/sec/: sec.tex
src/doc/latex/chapterfolder/util/sub/: sub.tex
src/doc/pkfix/: README
src/doc/web2c/: web2c.html
src/dvipdfm/: README
src/dvips/config/: config.ps
src/fmtutil/: format.aleph.cnf  format.amstex.cnf  format.cslatex.cnf  format.latex.cnf  format.metafont.cnf  format.omega.cnf  format.pdftex.cnf  format.tex.cnf  format.xetex.cnf
src/scripts/tetex/: texdoctk.pl  texi2html.pl  updmap.pl
src/texdoctk/: texdocrc.defaults
src/vtex/config/: lucidabr-k.ali  lucidabr.ali  lumath-k.ali  lumath.ali  ugq.ali
src/web2c/: texmf.cnf  updmap.cfg
(+2607 files in other folders)
